Copyright notice, tweaked “More features on the way”

--- a/TrackCoach/Base.lproj/Main.storyboard
+++ b/TrackCoach/Base.lproj/Main.storyboard
@@ -385,7 +385,7 @@
 
 Please let me know if you have any questions or feedback!
 
-More features coming soon!
+More features on the way!
 
  - Peter Carnesciali</string>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
