--- a/TrackCoach/Main_iPad.storyboard
+++ b/TrackCoach/Main_iPad.storyboard
@@ -353,6 +353,164 @@ More features on the way!
             </objects>
             <point key="canvasLocation" x="858" y="57"/>
         </scene>
+        <!--Page View Controller-->
+        <scene sceneID="XyC-Jq-KQQ">
+            <objects>
+                <pageViewController storyboardIdentifier="PageViewController" autoresizesArchivedViewToFullSize="NO" transitionStyle="scroll" navigationOrientation="horizontal" spineLocation="none" id="edF-Jp-Y5Q" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="HAG-uP-BzY" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="766" y="1348"/>
+        </scene>
+        <!--Tutorial1 View Controller-->
+        <scene sceneID="RME-FA-iub">
+            <objects>
+                <viewController storyboardIdentifier="Tutorial1ViewController" id="QSy-nL-cfe" customClass="Tutorial1ViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="RVK-kY-giR"/>
+                        <viewControllerLayoutGuide type="bottom" id="Z29-Th-VLO"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="mHz-8J-fAs">
+                        <rect key="frame" x="0.0" y="20" width="768" height="1004"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="TrackCoach" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0F9-mN-blT">
+                                <rect key="frame" x="279" y="25" width="211" height="48"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="40"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Start/Stop ▷" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="f38-Y8-rBQ">
+                                <rect key="frame" x="636" y="70" width="117" height="24"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Lap/Reset ▷" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sZ8-uK-7Le">
+                                <rect key="frame" x="636" y="142" width="117" height="24"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" text="Keep your eyes on the race! When using TrackCoach, you can use your iPhone's volume buttons to control the stopwatch!" textAlignment="center" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RP9-AZ-nsG">
+                                <rect key="frame" x="150" y="594" width="468" height="410"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="128" id="y2z-UJ-c0e"/>
+                                </constraints>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="23"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Control With Volume Buttons" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="U0F-A6-9ly">
+                                <rect key="frame" x="159" y="523" width="451" height="41"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="34"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="transparent_iPad.png" translatesAutoresizingMaskIntoConstraints="NO" id="yLt-wi-xQL">
+                                <rect key="frame" x="110" y="75" width="318" height="318"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="318" id="6nY-Mb-zev"/>
+                                    <constraint firstAttribute="width" constant="318" id="hrk-Od-pSS"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" red="1" green="0.47843137250000001" blue="0.10980392160000001" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="U0F-A6-9ly" firstAttribute="top" secondItem="0F9-mN-blT" secondAttribute="bottom" constant="450" id="3qB-Hl-GcR"/>
+                            <constraint firstAttribute="trailing" secondItem="f38-Y8-rBQ" secondAttribute="trailing" constant="15" id="B1t-dI-Vuo"/>
+                            <constraint firstItem="sZ8-uK-7Le" firstAttribute="top" secondItem="f38-Y8-rBQ" secondAttribute="bottom" constant="48" id="FBS-Ye-I3n"/>
+                            <constraint firstItem="RP9-AZ-nsG" firstAttribute="leading" secondItem="mHz-8J-fAs" secondAttribute="leading" constant="150" id="GQC-e0-Sni"/>
+                            <constraint firstAttribute="centerX" secondItem="U0F-A6-9ly" secondAttribute="centerX" id="Gt8-5H-Ra6"/>
+                            <constraint firstItem="yLt-wi-xQL" firstAttribute="leading" secondItem="mHz-8J-fAs" secondAttribute="leading" constant="110" id="H3e-8J-oEX"/>
+                            <constraint firstItem="sZ8-uK-7Le" firstAttribute="leading" secondItem="f38-Y8-rBQ" secondAttribute="leading" id="RRZ-dp-Qe6"/>
+                            <constraint firstItem="RP9-AZ-nsG" firstAttribute="top" secondItem="U0F-A6-9ly" secondAttribute="bottom" constant="30" id="Z8A-g5-iHq"/>
+                            <constraint firstItem="yLt-wi-xQL" firstAttribute="top" secondItem="RVK-kY-giR" secondAttribute="bottom" constant="75" id="dOP-LM-dS4"/>
+                            <constraint firstAttribute="centerX" secondItem="0F9-mN-blT" secondAttribute="centerX" id="di7-BG-fKr"/>
+                            <constraint firstItem="sZ8-uK-7Le" firstAttribute="trailing" secondItem="f38-Y8-rBQ" secondAttribute="trailing" id="h3b-eh-dGM"/>
+                            <constraint firstItem="0F9-mN-blT" firstAttribute="top" secondItem="RVK-kY-giR" secondAttribute="bottom" constant="25" id="hUN-dp-UIN"/>
+                            <constraint firstItem="f38-Y8-rBQ" firstAttribute="top" secondItem="RVK-kY-giR" secondAttribute="bottom" constant="70" id="iNp-X8-Ymv"/>
+                            <constraint firstAttribute="trailing" secondItem="RP9-AZ-nsG" secondAttribute="trailing" constant="150" id="sob-tx-n5W"/>
+                            <constraint firstItem="f38-Y8-rBQ" firstAttribute="width" secondItem="sZ8-uK-7Le" secondAttribute="width" id="wRr-wm-5QW"/>
+                            <constraint firstItem="Z29-Th-VLO" firstAttribute="top" secondItem="RP9-AZ-nsG" secondAttribute="bottom" id="wXH-Cp-a4k"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="differenceBetweenButtonIndicatorsSpaceConstraint" destination="FBS-Ye-I3n" id="cEd-Of-vx2"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="6rY-Dz-5hv" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1642" y="1348"/>
+        </scene>
+        <!--Tutorial2 View Controller-->
+        <scene sceneID="VQP-CL-1Nt">
+            <objects>
+                <viewController storyboardIdentifier="Tutorial2ViewController" id="9ZL-0r-Nl3" customClass="Tutorial2ViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="iKj-T1-lSk"/>
+                        <viewControllerLayoutGuide type="bottom" id="s0X-hD-tqT"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="31V-zd-QCm">
+                        <rect key="frame" x="0.0" y="20" width="768" height="1004"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Undo Stop" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cjt-yt-jpW">
+                                <rect key="frame" x="300" y="498" width="168" height="41"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="34"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="center" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zZZ-M8-rre">
+                                <rect key="frame" x="150" y="569" width="468" height="435"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <string key="text">If you accidentaly press stop during a race, don't worry! With the new Undo Stop feature, TrackCoach will continue with no lost time, as if you had never stopped.</string>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="23"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="TrackCoach" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IdH-Cd-54a">
+                                <rect key="frame" x="279" y="25" width="211" height="48"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="40"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="transparent_iPad.png" translatesAutoresizingMaskIntoConstraints="NO" id="ibH-Yr-r3C">
+                                <rect key="frame" x="110" y="75" width="318" height="318"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="318" id="LHG-ds-hhs"/>
+                                    <constraint firstAttribute="width" constant="318" id="YyO-wh-vIM"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" red="1" green="0.47843137250000001" blue="0.10980392160000001" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="zZZ-M8-rre" secondAttribute="trailing" constant="150" id="2ML-3Y-HJ8"/>
+                            <constraint firstItem="ibH-Yr-r3C" firstAttribute="top" secondItem="iKj-T1-lSk" secondAttribute="bottom" constant="75" id="32S-vi-Mj9"/>
+                            <constraint firstItem="IdH-Cd-54a" firstAttribute="top" secondItem="iKj-T1-lSk" secondAttribute="bottom" constant="25" id="Fcd-c1-rxF"/>
+                            <constraint firstAttribute="centerX" secondItem="IdH-Cd-54a" secondAttribute="centerX" id="V72-5s-tCo"/>
+                            <constraint firstAttribute="centerX" secondItem="cjt-yt-jpW" secondAttribute="centerX" id="Xom-sL-SWg"/>
+                            <constraint firstItem="s0X-hD-tqT" firstAttribute="top" secondItem="zZZ-M8-rre" secondAttribute="bottom" id="dFI-we-7hh"/>
+                            <constraint firstItem="cjt-yt-jpW" firstAttribute="top" secondItem="IdH-Cd-54a" secondAttribute="bottom" constant="425" id="hS3-a6-ifB"/>
+                            <constraint firstItem="zZZ-M8-rre" firstAttribute="leading" secondItem="31V-zd-QCm" secondAttribute="leading" constant="150" id="jwi-vO-EWy"/>
+                            <constraint firstItem="zZZ-M8-rre" firstAttribute="top" secondItem="cjt-yt-jpW" secondAttribute="bottom" constant="30" id="rqR-RK-r2p"/>
+                            <constraint firstItem="ibH-Yr-r3C" firstAttribute="leading" secondItem="31V-zd-QCm" secondAttribute="leading" constant="110" id="wGe-Cm-Vea"/>
+                            <constraint firstAttribute="centerX" secondItem="zZZ-M8-rre" secondAttribute="centerX" id="xSC-Pr-9LM"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="qsJ-Kv-mex" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2536" y="1348"/>
+        </scene>
         <!--Tutorial3 View Controller-->
         <scene sceneID="VQM-oI-FSl">
             <objects>
@@ -404,6 +562,7 @@ TrackCoach!</string>
     </scenes>
     <resources>
         <image name="Icon_iPad.png" width="512" height="512"/>
+        <image name="transparent_iPad.png" width="318" height="318"/>
     </resources>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
